--- a/exercise-backend/tsconfig.json
+++ b/exercise-backend/tsconfig.json
@@ -106,5 +106,9 @@
     "skipLibCheck": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "baseUrl": ".",
+    "paths": {
+      "express": ["node_modules/@types/express"]
+    }
   }
 }
