--- a/exercise-frontend/package.json
+++ b/exercise-frontend/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
   },
   "scripts": {
     "start": "react-scripts start",
