--- a/exercise-backend/tsconfig.json
+++ b/exercise-backend/tsconfig.json
@@ -102,13 +102,18 @@
     // "allowUnreachableCode": true,                     /* Disable error reporting for unreachable code. */
 
     /* Completeness */
-    // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
+    // "skipDefaultLibCheck": true,
+    /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "rootDir": "./src",
     "baseUrl": ".",
     "paths": {
-      "express": ["node_modules/@types/express"]
+      "express": ["node_modules/@types/express"],
+      "@/*": ["src/*"]
     }
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
